<resources>
    <string name="app_name">FootRecod</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShiLuying</string>
    <string name="nav_header_subtitle">2017012183</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">List</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_home">Home</string>
    <string name="menu_version">Version</string>

    <string name="add_site">地点</string>
    <string name="add_title">标题</string>
    <string name="add_content">内容</string>
    <string name="add_picture">添加图片</string>
    <string name="add_submit">提交</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add">Add</string>
    <string name="detail_delete">删除</string>
    <string name="detail_change">修改</string>
    <string name="menu_weather">weather</string>
</resources>
