<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/menu_weather" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_version"
                android:icon="@drawable/version"
                android:title="@string/menu_version" />
        </menu>
    </item>

</menu>
