<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.shiluying.footrecord.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list_list" />
    <fragment
        android:id="@+id/nav_detail"
        android:name="com.shiluying.footrecord.ui.list.DetailFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/nav_add"
        android:name="com.shiluying.footrecord.ui.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.shiluying.footrecord.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.shiluying.footrecord.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />


    <fragment
        android:id="@+id/nav_version"
        android:name="com.shiluying.footrecord.ui.version.VersionFragment"
        android:label="@string/menu_version"
        tools:layout="@layout/fragment_version" />
</navigation>